#pragma once

enum class PrinterError
{
    NONE,
    PAPER_JAM,
    NO_PAPER,
    INK_EMPTY
};