#pragma once

enum class PrinterState
{
    IDLE,
    PRINTING,
    STOPPED,
    ERROR
};