@startuml

class Printer {
    - state : PrinterState
    - error : PrinterError
    - motor : Motor
    - sensor : Sensor
    - printJob : PrintJob
    - device : PrinterDevice*

    + Printer(device : PrinterDevice*)
    + startPrint() : void
    + stopPrint() : void
    + finishPrint() : void

    + getState() : PrinterState

    + getError() : PrinterError
    + setError(error : PrinterError) : void
    + clearError() : void

    + isMotorRunning() : bool

    + setPaperDetected(detected : bool) : void
    + setPaperJamDetected(detected : bool) : void

    + getRemainingAmount() : int
    + consumePrintAmount(amount : int) : bool

    + createPrintJob(copies : int) : void
    + executePrintJob() : bool
    + getTotalCopies() : int
    + getRemainingCopies() : int

    + startTimer(seconds : int) : void
    + tickTimer() : void
}

class Motor {
    - running : bool

    + Motor()
    + start() : void
    + stop() : void
    + isRunning() : bool
}

class Sensor {
    - paperDetected : bool
    - paperJamDetected : bool

    + Sensor()
    + setPaperDetected(detected : bool) : void
    + isPaperDetected() : bool
    + setPaperJamDetected(detected : bool) : void
    + isPaperJamDetected() : bool
}

class Timer {
    - running : bool
    - remainingSeconds : int

    + Timer()
    + start(seconds : int) : void
    + stop() : void
    + tick() : void
    + isExpired() : bool
}

class PrintJob {
    - totalCopies : int
    - remainingCopies : int

    + PrintJob()
    + create(copies : int) : void
    + hasJob() : bool
    + getTotalCopies() : int
    + getRemainingCopies() : int
    + printOne() : bool
    + clear() : void
}

abstract class PrinterDevice {
    + PrinterDevice()
    + ~PrinterDevice()

    {abstract} + print() : void
    {abstract} + print(copies : int) : void
    {abstract} + getRemainingAmount() : int
    {abstract} + consumeAmount(amount : int) : void
}

class InkjetPrinter {
    - inkAmount : int

    + InkjetPrinter()
    + print() : void
    + print(copies : int) : void
    + getRemainingAmount() : int
    + consumeAmount(amount : int) : void
}

class LaserPrinter {
    - tonerAmount : int

    + LaserPrinter()
    + print() : void
    + print(copies : int) : void
    + getRemainingAmount() : int
    + consumeAmount(amount : int) : void
}

class Logger {
    {static} + info(message : string) : void
    {static} + warning(message : string) : void
    {static} + error(message : string) : void
}

enum PrinterState {
    IDLE
    PRINTING
    STOPPED
    ERROR
}

enum PrinterError {
    NONE
    PAPER_JAM
    NO_PAPER
    INK_EMPTY
}

Printer --> PrinterState
Printer --> PrinterError

Printer *-- Motor
Printer *-- Sensor
Printer *-- PrintJob
Printer *-- Timer
Printer --> PrinterDevice

PrinterDevice <|-- InkjetPrinter
PrinterDevice <|-- LaserPrinter

Printer ..> Logger
Logger ..> LogLevel

enum LogLevel {
    INFO
    WARNING
    ERROR
}

@enduml